--- a/www/apps/api-reference/specs/admin/components/schemas/AdminShippingOptionRule.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/AdminShippingOptionRule.yaml
@@ -1,5 +1,5 @@
 type: object
-description: The rule's rules.
+description: The shipping option rule's details.
 x-schemaName: AdminShippingOptionRule
 required:
   - id
@@ -14,11 +14,12 @@ properties:
   id:
     type: string
     title: id
-    description: The rule's ID.
+    description: The shipping option rule's ID.
   attribute:
     type: string
     title: attribute
-    description: The rule's attribute.
+    description: The shipping option rule's attribute.
+    example: is_return
   operator:
     type: string
     description: The rule's operator.
@@ -32,32 +33,24 @@ properties:
       - gte
       - nin
   value:
-    oneOf:
-      - type: string
-        title: value
-        description: The rule's value.
-      - type: array
-        description: The rule's value.
-        items:
-          type: string
-          title: value
-          description: The value's details.
+    type: string
+    title: value
   shipping_option_id:
     type: string
     title: shipping_option_id
-    description: The rule's shipping option id.
+    description: The ID of the shipping option this rule is for.
   created_at:
     type: string
     format: date-time
     title: created_at
-    description: The rule's created at.
+    description: The date the shipping option rule was created.
   updated_at:
     type: string
     format: date-time
     title: updated_at
-    description: The rule's updated at.
+    description: The date the shipping option rule was updated.
   deleted_at:
     type: string
     format: date-time
     title: deleted_at
-    description: The rule's deleted at.
+    description: The date the shipping option rule was deleted.
