--- a/www/apps/api-reference/specs/admin/components/schemas/InventoryLevel.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/InventoryLevel.yaml
@@ -1,5 +1,5 @@
 type: object
-description: The created's details.
+description: The inventory level's details
 x-schemaName: InventoryLevel
 required:
   - id
@@ -13,31 +13,31 @@ properties:
   id:
     type: string
     title: id
-    description: The created's ID.
+    description: The inventory level's ID.
   inventory_item_id:
     type: string
     title: inventory_item_id
-    description: The created's inventory item id.
+    description: The ID of the associated inventory item.
   location_id:
     type: string
     title: location_id
-    description: The created's location id.
+    description: The ID of the associated location.
   stocked_quantity:
     type: number
     title: stocked_quantity
-    description: The created's stocked quantity.
+    description: The inventory level's stocked quantity.
   reserved_quantity:
     type: number
     title: reserved_quantity
-    description: The created's reserved quantity.
+    description: The inventory level's reserved quantity.
   available_quantity:
     type: number
     title: available_quantity
-    description: The created's available quantity.
+    description: The inventory level's available quantity.
   incoming_quantity:
     type: number
     title: incoming_quantity
-    description: The created's incoming quantity.
+    description: The inventory level's incoming quantity.
   metadata:
     type: object
-    description: The created's metadata.
+    description: The inventory level's metadata, can hold custom key-value pairs.
