--- a/www/apps/api-reference/specs/admin/components/schemas/StoreProductTypeResponse.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/StoreProductTypeResponse.yaml
@@ -1,5 +1,5 @@
 type: object
-description: SUMMARY
+description: The product type's details.
 x-schemaName: StoreProductTypeResponse
 required:
   - product_type
