--- a/www/apps/api-reference/specs/store/components/schemas/AdminBatchInventoryItemsLocationLevelsResponse.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/AdminBatchInventoryItemsLocationLevelsResponse.yaml
@@ -1,21 +1,21 @@
 type: object
-description: SUMMARY
+description: The result of managing inventory levels.
 x-schemaName: AdminBatchInventoryItemsLocationLevelsResponse
 properties:
   created:
     type: array
-    description: The inventory item's created.
+    description: The created inventory levels.
     items:
       $ref: ./InventoryLevel.yaml
   updated:
     type: array
-    description: The inventory item's updated.
+    description: The updated inventory levels.
     items:
       $ref: ./InventoryLevel.yaml
   deleted:
     type: array
-    description: SUMMARY
+    description: The IDs of deleted inventory levels.
     items:
       type: string
       title: deleted
-      description: SUMMARY
+      description: The ID of a deleted inventory level.
