--- a/www/apps/api-reference/specs/store/components/schemas/StoreProductTagListResponse.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/StoreProductTagListResponse.yaml
@@ -1,5 +1,5 @@
 type: object
-description: SUMMARY
+description: The paginated list of product tags.
 x-schemaName: StoreProductTagListResponse
 required:
   - limit
@@ -10,17 +10,17 @@ properties:
   limit:
     type: number
     title: limit
-    description: The product tag's limit.
+    description: The maximum number of items returned.
   offset:
     type: number
     title: offset
-    description: The product tag's offset.
+    description: The number of items to skip before retrieving the returned items.
   count:
     type: number
     title: count
-    description: The product tag's count.
+    description: The total number of items available.
   product_tags:
     type: array
-    description: The product tag's product tags.
+    description: The list of product tags.
     items:
       $ref: ./StoreProductTag.yaml
