--- a/www/apps/api-reference/specs/store/paths/store_product-tags_{id}.yaml
+++ b/www/apps/api-reference/specs/store/paths/store_product-tags_{id}.yaml
@@ -22,10 +22,13 @@ get:
           url: https://docs.medusajs.com/api/store#publishable-api-key
     - name: fields
       in: query
-      description: |-
+      description: >-
         Comma-separated fields that should be included in the returned data.
-         * if a field is prefixed with `+` it will be added to the default fields, using `-` will remove it from the default fields.
-         * without prefix it will replace the entire default fields.
+
+        if a field is prefixed with `+` it will be added to the default fields,
+        using `-` will remove it from the default fields.
+
+        without prefix it will replace the entire default fields.
       required: false
       schema:
         type: string
