docs: generate OAS after cart promotion fixes

--- a/www/apps/api-reference/specs/store/openapi.full.yaml
+++ b/www/apps/api-reference/specs/store/openapi.full.yaml
@@ -1228,18 +1228,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              description: The promotion's details.
-              required:
-                - promo_codes
-              properties:
-                promo_codes:
-                  type: array
-                  description: Promotion codes to add to the cart.
-                  items:
-                    type: string
-                    title: promo_codes
-                    description: A promotion code.
+              $ref: '#/components/schemas/StoreCartAddPromotion'
       x-codeSamples:
         - lang: Shell
           label: cURL
@@ -24762,6 +24751,7 @@ components:
       description: The cart's details.
       x-schemaName: StoreCart
       required:
+        - promotions
         - currency_code
         - id
         - original_item_total
@@ -24932,6 +24922,25 @@ components:
           type: number
           title: original_shipping_tax_total
           description: The total taxes applied on the cart's shipping amount.
+        promotions:
+          type: array
+          description: The cart's promotions.
+          items:
+            $ref: '#/components/schemas/StoreCartPromotion'
+    StoreCartAddPromotion:
+      type: object
+      description: The promotion's details.
+      required:
+        - promo_codes
+      properties:
+        promo_codes:
+          type: array
+          description: Promotion codes to add to the cart.
+          items:
+            type: string
+            title: promo_codes
+            description: A promotion code.
+      x-schemaName: StoreCartAddPromotion
     StoreCartAddress:
       type: object
       description: The address's details.
@@ -25342,6 +25351,47 @@ components:
           type: number
           title: discount_tax_total
           description: The total taxes applied on the discounted amount.
+    StoreCartPromotion:
+      type: object
+      description: The promotion's promotions.
+      x-schemaName: StoreCartPromotion
+      required:
+        - id
+      properties:
+        id:
+          type: string
+          title: id
+          description: The promotion's ID.
+        code:
+          type: string
+          title: code
+          description: The promotion's code.
+        is_automatic:
+          type: boolean
+          title: is_automatic
+          description: The promotion's is automatic.
+        application_method:
+          type: object
+          description: The promotion's application method.
+          required:
+            - value
+            - type
+            - currency_code
+          properties:
+            value:
+              type: string
+              title: value
+              description: The application method's value.
+            type:
+              type: string
+              description: The application method's type.
+              enum:
+                - fixed
+                - percentage
+            currency_code:
+              type: string
+              title: currency_code
+              description: The application method's currency code.
     StoreCartResponse:
       type: object
       description: The cart's details.
