--- a/packages/admin/dashboard/package.json
+++ b/packages/admin/dashboard/package.json
@@ -45,10 +45,10 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "3.4.2",
-    "@medusajs/admin-shared": "2.4.0",
-    "@medusajs/icons": "2.4.0",
-    "@medusajs/js-sdk": "2.4.0",
-    "@medusajs/ui": "4.0.4",
+    "@medusajs/admin-shared": "~2.4.0",
+    "@medusajs/icons": "~2.4.0",
+    "@medusajs/js-sdk": "~2.4.0",
+    "@medusajs/ui": "~4.0.4",
     "@tanstack/react-query": "5.64.2",
     "@tanstack/react-table": "8.20.5",
     "@tanstack/react-virtual": "^3.8.3",
@@ -76,9 +76,9 @@
   },
   "devDependencies": {
     "@medusajs/admin-shared": "~2.4.0",
-    "@medusajs/admin-vite-plugin": "2.4.0",
-    "@medusajs/types": "2.4.0",
-    "@medusajs/ui-preset": "2.4.0",
+    "@medusajs/admin-vite-plugin": "~2.4.0",
+    "@medusajs/types": "~2.4.0",
+    "@medusajs/ui-preset": "~2.4.0",
     "@types/node": "^20.11.15",
     "@types/react": "^18.2.79",
     "@types/react-dom": "^18.2.25",
