--- a/www/apps/api-reference/specs/admin/components/schemas/AdminBatchUpdateProduct.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/AdminBatchUpdateProduct.yaml
@@ -158,6 +158,6 @@ properties:
   shipping_profile_id:
     type: string
     title: shipping_profile_id
-    description: The update's shipping profile id.
+    description: The ID of the product's shipping profile.
 required:
   - id
