--- a/www/apps/api-reference/specs/admin/components/schemas/AdminUpdateOrder.yaml
+++ b/www/apps/api-reference/specs/admin/components/schemas/AdminUpdateOrder.yaml
@@ -105,4 +105,4 @@ properties:
         description: The address's metadata, can hold custom key-value pairs.
   metadata:
     type: object
-    description: The order's metadata.
+    description: The order's metadata, can hold custom key-value pairs.
