--- a/www/apps/api-reference/specs/store/components/schemas/AdminCreateProduct.yaml
+++ b/www/apps/api-reference/specs/store/components/schemas/AdminCreateProduct.yaml
@@ -154,4 +154,4 @@ properties:
   shipping_profile_id:
     type: string
     title: shipping_profile_id
-    description: The create's shipping profile id.
+    description: The ID of the product's shipping profile.
