--- a/packages/admin/admin-sdk/package.json
+++ b/packages/admin/admin-sdk/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "@medusajs/admin-shared": "^2.5.0",
-    "zod": "^3.22"
+    "zod": "3.22.4"
   },
   "packageManager": "yarn@3.2.1"
 }
