fix the generate action by passing the token

--- a/.github/workflows/generate-doc-files.yml
+++ b/.github/workflows/generate-doc-files.yml
@@ -44,9 +44,11 @@ jobs:
         run: yarn prep
 
       - name: Commit and push changes (if any)
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "Shahed Nasser"
+          git config --global user.email "shahednasser@gmail.com"
           
           if [[ -n $(git status --porcelain www/apps/book/generated www/apps/book/public www/apps/resources/generated) ]]; then
             echo "Ran prep and generated files, committing and pushing..."
